# sideduck

./: .gitignore  CMakeLists.txt  README.md
Source/: CustomCurve.h  LFO.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SideDuckLookAndFeel.cpp  SideDuckLookAndFeel.h  Theme.h
