cmake_minimum_required(VERSION 3.22)

project(SideDuck VERSION 0.2.0)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(FetchContent)
FetchContent_Declare(
    JUCE
    GIT_REPOSITORY https://github.com/juce-framework/JUCE.git
    GIT_TAG 8.0.4
    GIT_SHALLOW TRUE
)
FetchContent_MakeAvailable(JUCE)

juce_add_plugin(SideDuck
    COMPANY_NAME "ClaudeTest"
    PLUGIN_MANUFACTURER_CODE Clts
    PLUGIN_CODE Sdck
    FORMATS VST3 Standalone
    PRODUCT_NAME "SideDuck"
    IS_SYNTH FALSE
    NEEDS_MIDI_INPUT TRUE
    NEEDS_MIDI_OUTPUT FALSE
    IS_MIDI_EFFECT FALSE
    COPY_PLUGIN_AFTER_BUILD FALSE
    VST3_CATEGORIES Fx Dynamics
)

target_sources(SideDuck PRIVATE
    Source/PluginProcessor.cpp
    Source/PluginEditor.cpp
    Source/SideDuckLookAndFeel.cpp
)

# embedded UI font (Space Grotesk, SIL OFL — licence in Assets/OFL.txt)
juce_add_binary_data(SideDuckAssets SOURCES
    Assets/SpaceGrotesk-Medium.ttf
    Assets/SpaceGrotesk-Bold.ttf
)

target_compile_definitions(SideDuck PUBLIC
    JUCE_WEB_BROWSER=0
    JUCE_USE_CURL=0
    JUCE_VST3_CAN_REPLACE_VST2=0
    JUCE_DISPLAY_SPLASH_SCREEN=0
)

target_link_libraries(SideDuck
    PRIVATE
        SideDuckAssets
        juce::juce_audio_utils
    PUBLIC
        juce::juce_recommended_config_flags
        juce::juce_recommended_lto_flags
        juce::juce_recommended_warning_flags
)
